backend/TempExecution/e9a224280b584825a1f269b8159fcdd8_output.txt
e9a224280b584825a1f269b8159fcdd8.cpp: In function 'int main()':
e9a224280b584825a1f269b8159fcdd8.cpp:13:5: error: 'cin' was not declared in this scope; did you mean 'std::cin'?
   13 | 
      |     ^  
      |     std::cin
In file included from C:/msys64/ucrt64/include/c++/14.1.0/x86_64-w64-mingw32/bits/stdc++.h:146,
                 from e9a224280b584825a1f269b8159fcdd8.cpp:1:
C:/msys64/ucrt64/include/c++/14.1.0/iostream:62:18: note: 'std::cin' declared here
   62 |   extern istream cin;           ///< Linked to standard input
      |                  ^~~
e9a224280b584825a1f269b8159fcdd8.cpp:17:9: error: 'cout' was not declared in this scope; did you mean 'std::cout'?
C:/msys64/ucrt64/include/c++/14.1.0/iostream:63:18: note: 'std::cout' declared here
   63 |   extern ostream cout;          ///< Linked to standard output
      |                  ^~~~
